# ChangeLog for dev-python/gnupg
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*gnupg-1.4.0 (07 Dec 2014)

  07 Dec 2014; Harold Naparst <harold@alum.mit.edu> +gnupg-1.4.0.ebuild,
  +metadata.xml:
  Add dev-python/gnupg-1.4.0
