@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Dec 2014; Harold Naparst <harold@alum.mit.edu> gnupg-1.4.0.ebuild,
+  metadata.xml:
+  Add python and proxy-maint herds. Put tags in lex order. Remove capital F in
+  description.
+
 *gnupg-1.4.0 (07 Dec 2014)
 
   07 Dec 2014; Harold Naparst <harold@alum.mit.edu> +gnupg-1.4.0.ebuild,
